--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'miku'
-version = '1.0-SNAPSHOT'
+version = '1.0.1-pre6'
 
 java {
     archivesBaseName = 'miku'
@@ -151,7 +151,7 @@ jar {
         attributes([
                 "Specification-Title"     : "miku",
                 "Specification-Vendor"    : "mcst12345",
-                "Specification-Version"   : "1.0.1-pre5", // We are version 1 of ourselves
+                "Specification-Version"   : "1.0.1-pre6", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "mcst12345",
