--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+keyStore=/root/文档/ssl/mod/mod.jks
+storePass=mikumiku
+keyPass=mikumiku
+alias=signFiles
